// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete /> Snapshots should match with a full width component 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 100%;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: 100%;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="c3 c4"
          data-testid="input"
          id="downshift-1-input"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
        
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with default component 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 {
  z-index: 1;
}

.c0 {
  position: relative;
  width: auto;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="c3 c4"
          data-testid="input"
          id="downshift-0-input"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
        
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with full width options list 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3 ~ legend {
  max-width: 1000px;
}

.c3 ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 100%;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c8 {
  box-sizing: content-box;
  cursor: pointer;
  outline: none;
  position: absolute;
  right: 0;
  width: 20px;
  top: 14px;
  fill: #9898A6;
  height: 52px;
  padding-left: 8px;
  padding-right: 16px;
  -webkit-transform: translateY(-6px);
  -ms-transform: translateY(-6px);
  transform: translateY(-6px);
}

.c8:hover,
.c8:focus {
  fill: #41414A;
}

.c4 {
  z-index: 1;
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 fieldset {
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 label {
  color: #41414A;
  font-weight: 700;
}

.c4 legend {
  font-weight: 700;
}

.c0 {
  position: relative;
  width: 100%;
}

.c9 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 100%;
  max-height: 312px;
  box-sizing: border-box;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #41414A;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c10:hover {
  background-color: #F5F5FA;
}

.c11 {
  background: transparent;
  color: inherit;
  font-weight: 700;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    aria-owns="downshift-3-menu"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-3-menu"
          aria-labelledby="downshift-3-label"
          autocomplete="off"
          class="c3 c4"
          data-testid="input"
          id="downshift-3-input"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
        <svg
          class="c8"
          role="button"
          tabindex="0"
        />
      </fieldset>
    </div>
    <ul
      aria-labelledby="downshift-3-label"
      class="c9"
      id="downshift-3-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="c10"
        id="downshift-3-item-0"
        role="option"
      >
        
        <mark
          class="c11"
        >
          s
        </mark>
        econd
      </li>
      <li
        aria-selected="false"
        class="c10"
        id="downshift-3-item-1"
        role="option"
      >
        fir
        <mark
          class="c11"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;

exports[`<AutoComplete /> Snapshots should match with options list 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 40px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3 ~ legend {
  max-width: 1000px;
}

.c3 ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c8 {
  box-sizing: content-box;
  cursor: pointer;
  outline: none;
  position: absolute;
  right: 0;
  width: 20px;
  top: 14px;
  fill: #9898A6;
  height: 52px;
  padding-left: 8px;
  padding-right: 16px;
  -webkit-transform: translateY(-6px);
  -ms-transform: translateY(-6px);
  transform: translateY(-6px);
}

.c8:hover,
.c8:focus {
  fill: #41414A;
}

.c4 {
  z-index: 1;
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 fieldset {
  border-color: #41414A;
  border-bottom-width: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c4 label {
  color: #41414A;
  font-weight: 700;
}

.c4 legend {
  font-weight: 700;
}

.c0 {
  position: relative;
  width: auto;
}

.c9 {
  position: absolute;
  margin: 0;
  padding: 0;
  z-index: 999;
  top: 52px;
  width: 320px;
  max-height: 312px;
  box-sizing: border-box;
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #41414A;
  border-top-width: 0;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  list-style: none;
  cursor: pointer;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  outline: none;
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

.c10:hover {
  background-color: #F5F5FA;
}

.c11 {
  background: transparent;
  color: inherit;
  font-weight: 700;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-2-menu"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="c3 c4"
          data-testid="input"
          id="downshift-2-input"
          value="s"
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
        <svg
          class="c8"
          role="button"
          tabindex="0"
        />
      </fieldset>
    </div>
    <ul
      aria-labelledby="downshift-2-label"
      class="c9"
      id="downshift-2-menu"
      role="listbox"
    >
      <li
        aria-selected="false"
        class="c10"
        id="downshift-2-item-0"
        role="option"
      >
        
        <mark
          class="c11"
        >
          s
        </mark>
        econd
      </li>
      <li
        aria-selected="false"
        class="c10"
        id="downshift-2-item-1"
        role="option"
      >
        fir
        <mark
          class="c11"
        >
          s
        </mark>
        t
      </li>
    </ul>
  </div>
</div>
`;
